# url-shortener

./: .gitignore  FEATURES_PLAN.md  INTEGRATION_CONTRACT.md  Makefile  ORCHESTRATOR.md  README.md
admin-panel/: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  angular.json  docker-compose.yml  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json
analytics-worker/: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
analytics-worker/tests/: conftest.py  test_bot_detector.py  test_consumer.py  test_enricher.py  test_writer.py
analytics-worker/worker/: __init__.py  bot_detector.py  config.py  consumer.py  enricher.py  geoip.py  health.py  logging.py  main.py  metrics.py  pel_reclaimer.py  ua.py  writer.py
api-service/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
api-service/alembic/: env.py
api-service/alembic/versions/: 001_initial.py  002_long_url_trigram_and_dns_token.py  003_p0_features.py
api-service/app/: __init__.py  clickhouse_client.py  config.py  database.py  deps.py  exceptions.py  log_config.json  logging.py  main.py  minio_client.py  redis_client.py
api-service/app/middleware/: rate_limiter.py  request_id.py  timing.py
api-service/app/models/: __init__.py  api_key.py  base.py  bulk_job.py  domain.py  folder.py  retarget_pixel.py  short_code_pool.py  url.py  user.py  utm_template.py  webhook.py  workspace.py
api-service/app/routers/: analytics.py  api_keys.py  auth.py  bulk_jobs.py  domains.py  folders.py  health.py  pixels.py  qr.py  urls.py  users.py  utm_templates.py  webhooks.py  workspaces.py
api-service/app/schemas/: analytics.py  api_key.py  auth.py  bulk_job.py  common.py  domain.py  folder.py  pixel.py  qr.py  url.py  user.py  utm_template.py  webhook.py  workspace.py
api-service/app/services/: analytics_service.py  api_key_service.py  auth_service.py  bulk_job_service.py  bulk_jobs_service.py  domain_service.py  folder_service.py  jwt_service.py  kgs_service.py  og_fetcher.py  pixel_service.py  qr_service.py  safe_browsing.py  safety_service.py  url_service.py  utm_template_service.py  webhook_service.py  workspace_service.py
api-service/app/utils/: base62.py  hashing.py  safe_http.py  url_validator.py
api-service/tests/: conftest.py  test_auth.py  test_bulk_jobs.py  test_bulk_jobs_worker.py  test_folders.py  test_health.py  test_og_fetcher.py  test_pixels.py  test_safety_service.py  test_urls.py  test_utm_templates.py  test_workspaces.py
chrome-extension/: .gitignore  .prettierrc  LICENSE  README.md  build.mjs  manifest.json  package-lock.json  package.json  tsconfig.json
infrastructure/: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
memory/: MEMORY.md  feedback_workflow.md  project_scope.md  reference_architecture.md  user_profile.md
redirect-service/: .dockerignore  .env.example  .gitignore  .golangci.yml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  go.mod  go.sum
research/: 00-umumiy-xulosa.md  01-arxitektura-va-system-design.md  02-biznes-logika-va-funksiyalar.md  03-arxitekturaviy-qarorlar-va-tradeofflar.md  04-ochiq-kodli-yechimlar.md  (+2 more)
reviews/: RV7-ui-ux.md  (+10 more)
(+117 files in other folders)
